2004-10-17 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync
	* src/symbol.cc: fixed gpsim crash on WIN32 in remove_module()

2004-10-12 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc: Added diagnostic printf's
	* src/pic-processor.cc, src/pic-processor.h, src/processor.cc,
	src/processor.h: add an option to not update the gui while single
	stepping.

2004-10-11 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc, src/processor.cc: Applied, but modified, patch from
	Craig Franklin that brings gpsim up to date with new gputils release.

2004-10-07 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc, gui/gui_breadboard.h, gui/gui_menu.cc:
	Cleaned up the gui breadboard code a little by making the gui_module
	structure a GuiModule class. In addition, new modules are queued 
	into the breadboard and realized only after the breadboard has
	been built.
	
2004-10-07 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_opcode.cc: window was being built before cpu had been
	initialized.
	* cli/cmd_disasm.cc, src/processor.cc, src/trace.cc: Disassembling
	and tracing had wrong addresses for the 18F family (again...)
	
2004-10-06 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc, gui/gui_src_opcode.cc,
	gui/gui_statusbar.cc, src/breakpoints.cc: Fixed breakpoint
	icon refreshing. Also fixed  Source browser window creation if either
	~/gpsim is missing or the registry hasn't been initialized

2004-10-05 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: Moved the creation of the Search Dialog
	window out of Build() and into its own function. Changed the behavior 
	of the signal callbacks to conform to GTK+ 2.X

2004-10-04 Scott Dattalo <scott@dattalo.com>
	* README, INSTALL: Cleaned up stale documentation.
	
2004-10-04 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: Send an extra CR to the parser when loading a
	command file. Turns out that when the gui loads a file, the